--- a/index.html
+++ b/index.html
@@ -20,17 +20,30 @@
 
     <main>
         <section>
-            <h2>Scopri i nostri deliziosi biscotti</h2>
-            <p>Benvenuti nel nostro negozio di biscotti, dove potrete trovare una vasta selezione di biscotti freschi e gustosi.</p>
-            <p>Esplora la nostra gamma di biscotti artigianali, preparati con ingredienti di alta qualità e amore.</p>
-            <a href="#">Scopri di più</a>
+            <h2>La nostra storia</h2>
+            <p>Scopri la nostra affascinante storia di come siamo diventati il negozio di biscotti più amato della città.</p>
+            <a href="#">Leggi di più</a>
         </section>
 
+        <section>
+            <h2>Biscotti più venduti</h2>
+            <p>Scopri i nostri biscotti più amati e apprezzati dai nostri clienti.</p>
+            <p>Dai classici biscotti al cioccolato alle specialità uniche, troverai sicuramente il tuo preferito.</p>
+            <a href="#">Scopri i best seller</a>
+        </section>
+        
         <section>
             <h2>I nostri prodotti</h2>
             <p>Offriamo una varietà di biscotti, dai classici biscotti al cioccolato ai biscotti al burro e molto altro ancora.</p>
             <p>Tutti i nostri biscotti sono preparati giornalmente per garantire la massima freschezza e sapore.</p>
             <a href="#">Esplora i prodotti</a>
+        </section>
+
+        <section>
+            <h2>Offerte speciali</h2>
+            <p>Approfitta delle nostre offerte speciali sui biscotti per rendere ancora più dolci i tuoi momenti.</p>
+            <p>Scopri le promozioni in corso e assicurati di non perdere le occasioni imperdibili.</p>
+            <a href="#">Scopri le offerte</a>
         </section>
 
         <section>
