--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page - Negozio di Biscotti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -19,10 +20,17 @@
     </header>
 
     <main>
-        <section>
-            <h2>La nostra storia</h2>
-            <p>Scopri la nostra affascinante storia di come siamo diventati il negozio di biscotti più amato della città.</p>
-            <a href="#">Leggi di più</a>
+        <section id="story" class="min-vh-100 d-flex text-center section-padding border-top">
+            <div class="container">
+                <div class="section-title">
+                    <h1 id="titolo" class="display-4 fw-semibold mt-5">Negozio di Biscotti</h1>
+                </div>
+                <div class="row g-4 text-center my-10">
+                    <h2>La nostra storia</h2>
+                    <p>Scopri la nostra affascinante storia di come siamo diventati il negozio di biscotti più amato della città.</p>
+                    <a href="#">Leggi di più</a>
+                </div>
+            </div>
         </section>
 
         <section>
