--- a/index.html
+++ b/index.html
@@ -57,10 +57,31 @@
             <a href="#">Scopri le offerte</a>
         </section>
 
-        <section>
+        <section class="col-6 border p-3">
             <h2>Contattaci</h2>
             <p>Hai domande o richieste? Non esitare a contattarci. Saremo felici di assisterti.</p>
-            <a href="#">Contattaci</a>
+
+            <form>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" required></textarea>
+                        <label for="floatingTextarea2">Message</label>
+                </div>
+                <div class="row">
+                    <div class="col d-flex">
+                        <div class="form-check mx-auto">
+                            <input type="checkbox" class="form-check-input" id="nlCheck">
+                            <label class="form-check-label" for="nlCheck">Newsletter</label>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <button type="submit" class="btn btn-primary mx-auto">Submit</button>
+                    </div>
+                </div>
+              </form>
         </section>
     </main>
 
