--- a/index.html
+++ b/index.html
@@ -26,23 +26,47 @@
         <section id="story" class="min-vh-100 d-flex text-center section-padding border-top">
             <div class="container">
                 <div class="section-title">
-                    <h1 id="titolo" class="display-4 fw-semibold mt-5">Negozio di Biscotti</h1>
+                    <h1 id="titoloStory" class="display-4 fw-semibold mt-5">Negozio di Biscotti</h1>
                 </div>
-                <div class="row g-4 text-center my-10">
-                    <h2>La nostra storia</h2>
-                    <p>Scopri la nostra affascinante storia di come siamo diventati il negozio di biscotti più amato della città.</p>
-                    <a href="#">Leggi di più</a>
+                <div class="row g-4 text-center my-5">
+                    <div class="storyDesc theme-shadow p-lg-5 p-4">
+                        <h2>La nostra storia</h2>
+                        <p>La storia di "Dolcezza in Forno" inizia con un sogno e una passione: quella di nonna Rosa, una donna affascinata dalla magia della pasticceria fin dai tempi della sua giovinezza. Cresciuta in un piccolo villaggio dove la condivisione di ricette e tradizioni era un modo di vivere, nonna Rosa decise di concretizzare il suo amore per i dolci aprendo un negozio tutto suo.
+                            Era l'anno 1955 quando, con determinazione e l'aiuto della sua famiglia, nonna Rosa aprì le porte di un modesto laboratorio di biscotti nel cuore del villaggio. Armata di antiche ricette di famiglia e segreti tramandati di generazione in generazione, iniziò a preparare biscotti artigianali con ingredienti di prima qualità.
+                            Le sue creazioni si diffusero velocemente tra gli abitanti del villaggio, che apprezzavano non solo il gusto irresistibile dei biscotti, ma anche il calore umano che emanava da quel piccolo negozio. Le famiglie iniziarono a fare visita a "Dolcezza in Forno" non solo per soddisfare la loro golosità, ma anche per condividere momenti speciali e creare ricordi duraturi.
+                            Con il passare degli anni, il negozio di nonna Rosa crebbe e si trasformò in un luogo iconico della comunità. La sua dedizione all'artigianato e alla qualità divenne il marchio distintivo di "Dolcezza in Forno", attirando clienti da tutto il paese.
+                            Quando nonna Rosa passò il testimone a sua figlia Anna, quest'ultima portò con sé una ventata di innovazione senza compromettere l'autenticità delle ricette di famiglia. Il negozio si modernizzò, ma la tradizione e l'amore per la preparazione artigianale dei biscotti rimasero intatte.
+                            Oggi, "Dolcezza in Forno" è più che un negozio di biscotti; è un luogo dove le generazioni si incontrano, i sorrisi si condividono e le storie continuano a essere tessute nella trama del villaggio. La dolce eredità di nonna Rosa vive attraverso ogni biscotto appena sfornato, mantenendo viva la magia che ha dato origine a questa avventura dolce e indimenticabile.</p>
+                        <a href="#">Leggi di più</a>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section>
-            <h2>Biscotti più venduti</h2>
-            <p>Scopri i nostri biscotti più amati e apprezzati dai nostri clienti.</p>
-            <p>Dai classici biscotti al cioccolato alle specialità uniche, troverai sicuramente il tuo preferito.</p>
-            <a href="#">Scopri i best seller</a>
+        <section id="bestseller" class="brick_block min-vh-100 d-flex section-padding border-top">
+
+            <!--Metà Sinistra-->
+            <div class="col">
+                <div class="section-title">
+                    <h1 id="titoloBestseller" class="display-4 fw-semibold mt-5">Best Seller</h1>
+                </div>
+                <div class="row g-4 my-5">
+                    <div class="bestsellerDesc theme-shadow p-lg-5 p-4">
+                        <h2>Biscotti Ikea</h2>
+                        <p>La storia di "Dolcezza in Forno" inizia con un sogno e una passione: quella di nonna </p>
+                        <a href="#">Leggi di più</a>
+                    </div>
+                </div>
+            </div>
+
+            <!--Metà Destra-->
+            <div class="col">
+
+            </div>
+
         </section>
-        
+
+
         <section>
             <h2>I nostri prodotti</h2>
             <p>Offriamo una varietà di biscotti, dai classici biscotti al cioccolato ai biscotti al burro e molto altro ancora.</p>
@@ -70,3 +94,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
