--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-        <h1 class="navbar-brand">Negozio di Biscotti</h1>
+        <h1 class="navbar-brand m-auto p-3">Negozio di Biscotti</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
