--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-        <h1 class="navbar-brand m-auto p-3">Negozio di Biscotti</h1>
+    <header class="navbar navbar-expand-lg bg-dark">
+        <h1 class="navbar-brand m-auto p-3 text-light">Negozio di Biscotti</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <nav class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Prodotti</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contatti</a></li>
+                <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-light" href="#">Prodotti</a></li>
+                <li class="nav-item"><a class="nav-link text-light" href="#">Contatti</a></li>
             </ul>
         </nav>
     </header>
