Section Best Seller

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+        <!--Nome + Storia del Negozio -->
         <section id="story" class="min-vh-100 d-flex text-center section-padding border-top">
             <div class="container">
                 <div class="section-title">
@@ -43,14 +44,15 @@
             </div>
         </section>
 
-        <section id="bestseller" class="brick_block min-vh-100 d-flex section-padding border-top">
+        <!--Best Seller-->
+        <section id="bestseller" class="min-vh-100 d-flex section-padding border-top">
             <!--Metà Sinistra-->
             <div class="col">
                 <div class="section-title">
                     <h1 id="titoloBestseller" class="display-4 fw-semibold mt-5">Best Seller</h1>
                 </div>
                 <div class="row g-4 my-5">
-                    <div class="bestsellerDesc theme-shadow p-lg-5 p-4">
+                    <div class="bestsellerDescText theme-shadow p-lg-5">
                         <h2>Biscotti Ikea</h2>
                         <p>La storia di "Dolcezza in Forno" inizia con un sogno e una passione: quella di nonna </p>
                         <a href="#">Leggi di più</a>
@@ -60,7 +62,13 @@
 
             <!--Metà Destra-->
             <div class="col">
+                <div class="container p-lg-5 p-4">
+                    <div class="bestsellerDescImage theme-shadow p-lg-5 m-auto">
+                        <p>
 
+                        </p>
+                    </div>
+                </div>
             </div>
 
         </section>
