--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2022 Negozio di Biscotti. Tutti i diritti riservati.</p>
+    <footer class="bg-dark">
+        <p class="text-light m-auto p-3">&copy; 2022 Negozio di Biscotti. Tutti i diritti riservati.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
