--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="#">Scopri le offerte</a>
         </section>
 
-        <section class="col-6 border p-3">
+        <section class="col-6 border p-3 m-auto my-3">
             <h2>Contattaci</h2>
             <p>Hai domande o richieste? Non esitare a contattarci. Saremo felici di assisterti.</p>
 
